<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">代码阅读器</string>
    <string name="file_explorer">文件浏览器</string>
    <string name="action_share">分享</string>
    <string name="action_open">打开文件</string>
    <string name="file_not_exists">文件不存在</string>
    <string name="file_too_large">文件大小不能超过%1$s</string>
    <string name="loading">加载中</string>
    <string name="action_refresh">刷新</string>
    <string name="action_sortby">排序</string>
    <string name="action_sort_by_name">按名称</string>
    <string name="action_sort_by_date">按最后修改日期</string>
    <string name="action_sort_by_size">按文件大小</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <string name="doc_recent">最近打开</string>
    <string name="doc_star">星标文件</string>
    <string name="doc_c">c</string>
    <string name="doc_cpp">c++</string>
    <string name="doc_css">css</string>
    <string name="doc_html">html</string>
    <string name="doc_lisp">lisp</string>
    <string name="doc_java">java</string>
    <string name="doc_js">js</string>
    <string name="doc_lua">lua</string>
    <string name="doc_perl">perl</string>
    <string name="doc_python">python</string>
    <string name="doc_ruby">ruby</string>
    <string name="doc_sql">sql</string>
    <string name="doc_vb">vb</string>
	<string name="doc_xml">xml</string>
	
	<string name="empty_root">空空如也</string>
	<string name="action_starred">星标</string>
</resources>
