<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/action_sort"
        android:icon="@drawable/ic_action_sort"
        android:title="@string/action_sortby"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/sort_by_name"
                  android:title="@string/action_sort_by_name" />
            <item android:id="@+id/sort_by_date"
                  android:title="@string/action_sort_by_date" />
            <item android:id="@+id/sort_by_size"
                  android:title="@string/action_sort_by_size" />
        </menu>
    </item>
    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="ifRoom"
        android:title="@string/action_refresh"/>
        

</menu>
